unpackaged/main/default/objects/Resolution_To_Clearing_Code_Mapping__mdt/Resolution_To_Clearing_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Resolution To Clearing Code Mapping</label>
    <pluralLabel>Resolution To Clearing Code Mappings</pluralLabel>
</CustomObject>