unpackaged/main/default/objects/Resolution_To_Clearing_Code_Mapping__mdt/fields/Clearing_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Code__c</fullName>
    <label>Clearing Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>