unpackaged/main/default/objects/Resolution_To_Clearing_Code_Mapping__mdt/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <label>Club</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NE</fullName>
                <default>true</default>
                <label>NE</label>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>