unpackaged/main/default/objects/Resolution_To_Clearing_Code_Mapping__mdt/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <label>Code Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>