unpackaged/main/default/objects/Resolution_To_Clearing_Code_Mapping__mdt/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Clearing_Code__c</columns>
    <columns>Club__c</columns>
    <columns>Code_Description__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>